--- a/src/Irc.Bot/Irc.Bot.csproj
+++ b/src/Irc.Bot/Irc.Bot.csproj
@@ -96,7 +96,7 @@
     </Reference>
     <Reference Include="Irc, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\ClassicIRCBot\src\IrcBot.GUI\bin\Debug\Irc.dll</HintPath>
+      <HintPath>..\Irc\bin\Debug\Irc.dll</HintPath>
     </Reference>
     <Reference Include="System">
       <Name>System</Name>
